--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant</title>
   </head>
-  <body></body>
+  <body>
+    <h1>🥐Croissant</h1>
+    <p>
+      A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[1] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French:
+      [kʁwasɑ̃] (listen)) is a buttery, flaky, French viennoiserie pastry
+      inspired by the shape of the Austrian kipferl but using the French
+      yeast-leavened laminated dough.[2] Croissants are named for their
+      historical crescent shape, the dough is layered with butter, rolled and
+      folded several times in succession, then rolled into a thin sheet, in a
+      technique called laminating. The process results in a layered, flaky
+      texture, similar to a puff pastry.
+    </p>
+    <a href="/">Homepage</a>
+    <a href="/photo.html">Photo</a>
+    <a href="/contact.html">Contact</a>
+  </body>
 </html>
