--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,8 +14,10 @@
       <a href="mailto:hello@croissant.com">hello@croissant.com </a>
       <span>for more info</span>
     </p>
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <footer>
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </footer>
   </body>
 </html>
