--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <meta
+      name="description"
+      content="ordering real french croissants in sydney "
+    />
+    <title>The best croissant in Sydney - Bakery.com</title>
   </head>
   <body>
     <h1>🥐Croissant</h1>
@@ -20,9 +24,9 @@
       texture, similar to a puff pastry.
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home"> Homepage</a>
+      <a href="/photo.html" title="Croissant photo"> Photo</a>
+      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
