--- a/photo.html
+++ b/photo.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <meta
+      name="description"
+      content="Enjoy a beautiful picture of a homemade croissant"
+    />
+    <title>Photo of the perfect Croissant - Bakery.com</title>
   </head>
   <body>
     <h1>🥐A picture of a croissant</h1>
     <img src="/images/Croissant-pilbara-bakehouse-cafe.jpg" alt="Croissant" />
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home"> Homepage</a>
+      <a href="/photo.html" title="Croissant photo"> Photo</a>
+      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
