SEO for contact page

--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Contact croissant.com to learn more about our homemade croissants"
+    />
+    <title>Contact us - Bakery.com</title>
   </head>
   <body>
     <h1>🥐Contact Croissant</h1>
     <p>
-      To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com </a>
+      To contact Bakery.com, please email us at
+      <a href="mailto:hello@bakery.com" title="contact us by email"
+        >hello@cbakery.com
+      </a>
       <span>for more info</span>
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home"> Homepage</a>
+      <a href="/photo.html" title="Croissant photo"> Photo</a>
+      <a href="/contact.html" title="Contact bakery.com"> Contact</a>
     </footer>
   </body>
 </html>
