--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+      <a href="/contact.html" title="Contact Cbakery.com"> Contact</a>
     </footer>
   </body>
 </html>
