--- a/photo.html
+++ b/photo.html
@@ -17,7 +17,7 @@
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+      <a href="/contact.html" title="Contact bakery.com"> Contact</a>
     </footer>
   </body>
 </html>
