title contact page

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
       name="description"
       content="Contact croissant.com to learn more about our homemade croissants"
     />
-    <title>Contact us - Bakery.com</title>
+    <title>Contact us by email- Bakery.com</title>
   </head>
   <body>
     <h1>🥐Contact Croissant</h1>
